test/studies/590o/blerner/nilClassCheck.good
A is: 1 2 3 4 5 nilClassCheck.chpl:17: error: attempt to dereference nil
